--- a/src/main/java/TEST/JieRui/OriginalSocket/Qiantai/index.html
+++ b/src/main/java/TEST/JieRui/OriginalSocket/Qiantai/index.html
@@ -54,15 +54,15 @@
             cursor: pointer;
             border: 3px solid rgba(0,0,0,0);
             /*动画显示时间*/
-            /*transition: all 2s ;*/
-            transition: all 0.3s;
+            transition: all 2s ;
+            /*transition: all 0.3s;*/
         }
 
         .div1 div:hover {
             border: 3px solid white;
-            /*transform: rotate(360deg);*/
+            transform: rotate(360deg);
             /*鼠标悬浮放大*/
-            transform: scale(1.08);
+            /*transform: scale(1.08);*/
         }
     </style>
 </head>
