--- a/src/webapp/login.html
+++ b/src/webapp/login.html
@@ -104,7 +104,7 @@
         .box-content {
             width: 400px;
             /*上右下左*/
-            padding: 30px 60px 70px 60px;
+            padding: 30px 60px 60px 60px;
             background: rgba(0, 0, 0, 0.4);
             /*background: rgba(255, 255, 255, 0.2);*/
             border-radius: 25px;
@@ -124,7 +124,7 @@
 <!--</div>-->
 <!--动画背景-->
 <div style="height: 100%;width: 100%;position: fixed; background: black">
-    <video style="height: 100%;width: 100%;object-fit: fill" autoplay="autoplay" loop="loop">
+    <video style="height: 100%;width: 100%;object-fit: fill" autoplay="autoplay" loop="loop" muted="muted">
         <source src="image/video.mp4" type="video/mp4">
     </video>
 </div>
@@ -133,7 +133,7 @@
     <!--输入框区-->
     <div class="box-content">
         <div style="text-align: center;color: white">
-            <h2>PLEASE&nbsp;&nbsp;LOGIN</h2>
+            <h2>港口智能照明系统</h2>
         </div>
         <br>
         <!--<div class="input-group">-->
@@ -165,15 +165,15 @@
             <label for="password" class="input-control-icon-left"><i class="icon icon-lock"></i></label>
         </div>
         <br>
-        <input id="button_login" class="btn btn-primary" type="button" style="width: 100%" value="LOGIN">
+        <input id="button_login" class="btn btn-primary" type="button" style="width: 100%" value="登陆">
         <!--<input id="button_login_clear" class="btn btn-danger" type="button" style="margin-left: 50px" value="Reset">-->
         <br>
         <br>
         <!--margin-left: -40px;margin-right: -40px-->
         <div style="font-size: 14px;font-weight: 600;">
             <!--<a href="download/comm.jar">Client Download</a>&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;-->
-            <a href="register.html">No ID? Register</a>
-            <a href="backpassword.html" style="float: right;">Forget Password?</a>
+            <!--<a href="register.html">No ID? Register</a>-->
+            <!--<a href="backpassword.html" style="float: right;">Forget Password?</a>-->
         </div>
     </div>
 </div>
